[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/AIcharC.gd" type="Script" id=1]
[ext_resource path="res://img/player.png" type="Texture" id=2]
[ext_resource path="res://img/bar_back.png" type="Texture" id=3]
[ext_resource path="res://img/bar_top.png" type="Texture" id=4]
[ext_resource path="res://scenes/DeepNN.tscn" type="PackedScene" id=5]

[sub_resource type="CircleShape2D" id=1]

[node name="character" type="KinematicBody2D"]
position = Vector2( 524.452, 324.728 )
rotation = -1.5708
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = -1.5708
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 2 )

[node name="EnergyBar" type="TextureProgress" parent="."]
margin_left = 16.3055
margin_top = -9.9447
margin_right = 36.3055
margin_bottom = -5.9447
rect_rotation = 90.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )

[node name="DeepNN" parent="." instance=ExtResource( 5 )]
[connection signal="loaded" from="DeepNN" to="." method="_on_DeepNN_loaded"]
